# vidstream-django

./: .env.example  .flake8  .gitignore  CONCEPT.md  Dockerfile  PATTERN_SUMMARY.md  QUICK_START.md  README.md  README_ARABIC.md  docker-compose.flower.yml  docker-compose.prod.yml  docker-compose.yml  dockerignore  nginx.conf  pyproject.toml
config/: celery.py  settings.py  urls.py
templates/videos/: index.html
videos/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  views.py
